Accept PR recommendations
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>